// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptConfiguringPortForwardingFailedStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Port forwarding failed"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/portForwarding"
    >
      Troubleshooting port forwarding problems
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to configure port forwarding from Accessibility Insights for Android Service on your device. Please reconnect your device and try again.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": false,
        "model": "Super-Duper Gadget",
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptConfiguringPortForwardingFailedStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Port forwarding failed"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/portForwarding"
    >
      Troubleshooting port forwarding problems
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to configure port forwarding from Accessibility Insights for Android Service on your device. Please reconnect your device and try again.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": true,
        "model": "Emulator Extraordinaire",
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
